--- a/index.html
+++ b/index.html
@@ -35,17 +35,11 @@
       color: #17111a;
       line-height: 2;
     }
+    #spells .used {
+      color: #17111a55;
+    }
   </style>
   <div id="spells">
-    <div>
-      1 - Heal
-    </div>
-    <div>
-      2 - Column
-    </div>
-    <div>
-      3 - Hurricane
-    </div>
   </div>
   <div id="game"></div> 
   <script src="dist/main.js"></script>
