TRYING TO FIX WEBPACK

--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
     </div>
   </div>
   <div id="game"></div> 
-  <script src="dist/main.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
