--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     body {
       color: #fff;
       background: #17111a;
-      background-image: url("/img/background.png");
+      background-image: url("dist/64e21210865227ccda3901d1a6fc5525.png");
       background-repeat: no-repeat;
       font-family: "Goblin";
     }
