change color lol

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     body {
       color: #fff;
-      background: #17111a;
+      background: blue;
       background-image: url("dist/64e21210865227ccda3901d1a6fc5525.png");
       background-repeat: no-repeat;
       font-family: "Goblin";
